{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "GameplayControls",
            "id": "69757c57-bf74-4d25-af12-a9a51fdf2e73",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "d456be5a-01cc-4b5f-a17f-3383e0894978",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Running",
                    "type": "PassThrough",
                    "id": "afc8b41a-dc56-4086-b11f-4bfe3ce8d165",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Emotes",
                    "type": "PassThrough",
                    "id": "7ba0859c-610d-4135-8d56-b396e9853bea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CannonControl",
                    "type": "PassThrough",
                    "id": "284ab1af-03c6-4165-babc-2872eea247ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickupObjects",
                    "type": "PassThrough",
                    "id": "f06551a8-8a5e-48e7-8d47-22fe7f436db4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamMove",
                    "type": "PassThrough",
                    "id": "323147de-458e-4fb2-85ac-f738f7215a1a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "51f59afd-01f9-4a14-8fab-97778be0643d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "7413323e-bf12-4da0-8065-aa3587834485",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Join",
                    "type": "Button",
                    "id": "0113867f-4e67-4f2d-aebc-d91948e40c8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "675d0d30-18f5-4776-84b5-cd0c53fba00e",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "013cbc1e-2573-431f-9e7f-dbf2bb3c058b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72e6cf34-941b-4f20-bfc3-73d21f754aa2",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Emotes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f62a2de-9ee5-4ad0-8384-77f2b4e15c06",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Emotes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae5f428e-edcb-4a64-a52d-bb843d767324",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Emotes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a43b5ccd-0042-4875-ab51-09115871f962",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Emotes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e97805f8-b0b9-41b7-b60b-f08a657c6ae8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CannonControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dba66a19-70b4-4251-9536-a74b76ed7a75",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickupObjects",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "005b9368-7a90-4332-8d52-13cf1446219d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "457d1a67-aaa7-406f-b560-f0453e2c8157",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e771a6d0-b6b4-4408-96bf-549cad4e318a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45071bc4-c5f3-4f8a-ad8c-811aff1ba2fc",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4cc81ed4-f7c1-4322-852e-c019ce620043",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3eaa0fa3-f515-4508-b7d4-b4c6fbbfece1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ac8baa5-0d74-428a-855e-603a4b41c335",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CannonMode",
            "id": "f220bfcb-a623-44a9-aba5-2e22e8bea04f",
            "actions": [
                {
                    "name": "Aiming",
                    "type": "PassThrough",
                    "id": "c4972b05-c4de-4d75-bdca-de7245733d85",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "244de854-08fe-477d-addd-41055cf20586",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8eb8d4d3-d088-4a70-a5dc-02a4ef2aff8f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aiming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c04a1792-fee1-4df1-87f6-e31bbe386260",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}