{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GamepadControls",
            "id": "69757c57-bf74-4d25-af12-a9a51fdf2e73",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "d456be5a-01cc-4b5f-a17f-3383e0894978",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Running",
                    "type": "Button",
                    "id": "afc8b41a-dc56-4086-b11f-4bfe3ce8d165",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "675d0d30-18f5-4776-84b5-cd0c53fba00e",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "013cbc1e-2573-431f-9e7f-dbf2bb3c058b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}